--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "express-paginate": "^1.0.2",
         "morgan": "^1.10.0",
         "nunjucks": "^3.2.3",
+        "popups": "^1.1.3",
         "sequelize": "^6.6.2",
         "sqlite3": "^5.0.2"
     },
